# dAIana

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
.github/: docs.yml
.github/workflows/: ci.yml
daiana/: __init__.py  allowed.py  cli.py  saver.py  shower.py  updater.py  utils.py
daiana/commands/: check_comm.py  compiler_cli.py  compiler_comm.py  contacts_comm.py  hunter_cli.py  hunter_comm.py  init_comm.py  oracler_cli.py  oracler_comm.py  saver_cli.py  saver_comm.py  shower_cli.py  shower_comm.py  updater_cli.py  updater_comm.py
daiana/commands_cli/: saver_cli.py  shower_cli.py  updater_cli.py
daiana/config/: settings.py
daiana/core/: compiler.py  hunter.py  initer.py  oracler.py  saver.py  shower.py  updater.py
daiana/domain/: models.py  validation.py
daiana/infra/: csv_repository.py  filesystem.py  latex_repository.py  llm_client.py  prompt_repository.py  scraper.py
daiana/services/: check_service.py  compile_service.py  contacts_service.py  hunt_service.py  init_service.py  oracle_service.py  save_service.py  show_service.py  update_service.py
daiana/utils/: colors.py  constants.py  for_check.py  for_csv.py  for_hunt.py  for_init.py  for_latex.py  for_oracle.py  for_update.py  prompt_loader.py  prompts.py  styles.py  ui.py
daiana/utils/design/: colors.py  styles.py  ui.py
docs/: architecture.rst  conf.py  index.rst  personalisation.rst  quickstart.rst  usage.rst
docs/_build/doctrees/: architecture.doctree  environment.pickle  index.doctree  personalisation.doctree  quickstart.doctree  usage.doctree
docs/_build/doctrees/personalisation/: env.doctree  latex.doctree  prompts.doctree
docs/_build/html/: .buildinfo  architecture.html  genindex.html  index.html  objects.inv  personalisation.html  quickstart.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: index.rst.txt  usage.rst.txt
docs/_build/html/_sources/personalisation/: prompts.rst.txt
docs/_build/html/personalisation/: env.html  latex.html  prompts.html
docs/personalisation/: env.rst  latex.rst  prompts.rst
job_hunt/: check_prompts.py  enviroment.sh
job_hunt/cv_and_letter/: template_cl.tex  template_cv.tex  user_name_cv_asdf.tex
job_hunt/cv_and_letter/loader/: preamble.tex  variants_cl.tex  variants_cv.tex
job_hunt/job_tracking/: backend_jobs.csv  data_jobs.csv
job_hunt/prompts/: things_to_modify.txt
job_hunt/prompts/background/: background_payload.md  background_prompt.md  background_schema.md
job_hunt/prompts/career/: career_headings.md  careers.md
job_hunt/prompts/core_strengths/: core_strengths_payload.md
job_hunt/prompts/fit/: fit_payload.md  fit_prompt.md  fit_schema.md
job_hunt/prompts/job/: job_prompt.md  job_schema.md
job_hunt/prompts/projects/: projects_name_to_latex.md  projects_payload.md  projects_prompt.md  projects_schema.md
job_hunt/prompts/sentence/: sentence_prompt.md  sentence_schema.md
job_hunt/prompts/skills/: skills_payload.md  skills_prompt.md  skills_schema.json
job_hunt/prompts/summary/: summary_data.md  summary_prompt.md  summary_quant.md  summary_rd.md  summary_schema.md  summary_software.md
templates/cv_and_letter/: template_cl.tex  template_cv.tex
templates/cv_and_letter/loader/: preamble.tex  variants.tex  variants_cl.tex  variants_cv.tex
templates/job_tracking/: data_jobs.csv
tests/: test_cli.py  test_latex.py  test_utils.py
tests/api_implementation/: about_api_integration.md  test_daiana.py  test_job.html  test_pplx.py
tests/cv_and_letter/: template_cl.tex  template_cv.tex
tests/cv_and_letter/cls/: moderncv.cls  moderncvbodyvi.sty  moderncvcolorice.sty  moderncvcolormint.sty  moderncvcolors.tex  moderncvheadiii.sty  moderncvheadvii.sty  moderncvstylecontemporary.sty
tests/cv_and_letter/loader/: preamble.tex  variants.tex
tests/job_tracking/: pathfirst_jobs.csv  pathsecond_jobs.csv
