[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["daiana*"]
exclude = ["templates*"]
namespaces = false

[project]
name = "daiana"
version = "1.0.0"
description = "AI empowered tool for LaTeX CV/cover letter automation for job hunting"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "PanoPepino", email = "panizofisico@gmail.com"}
]
keywords = ["cli", "latex", "cv", "cover-letter", "job-hunting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.12",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pypdf>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[project.scripts]
daiana = "daiana.cli:app"

[project.urls]
Homepage = "https://github.com/PanoPepino/Daiana"
Repository = "https://github.com/PanoPepino/Daiana"
